--- a/player-2019-theme.html
+++ b/player-2019-theme.html
@@ -214,7 +214,7 @@
 
     <script src="https://assets.manywho.com/js/loader.min.js"></script>
 
-    <style id="navbar">
+    <style>
         /* [LOGO in Navigation ]
         ======================*/
         .mw-bs .navbar-brand {
